# dynamic-price-forecast-loop

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  calibrated_markets.csv  calibrated_worlds_config.csv
examples/: quickstart.ipynb
fploop/: __init__.py  arms.py  crossover.py  features.py  loop.py  oracle.py  reproduce.py  sweep.py  types.py
fploop/calibration/: __init__.py  estimate.py  ingest.py  run.py  worlds.py
fploop/figures/: __init__.py  pre_post.py
fploop/forecasters/: __init__.py  base.py  feedforward.py  gbt.py  rnn.py
fploop/generators/: __init__.py  base.py  linear_logit.py
fploop/metrics/: bias.py  (+4 more)
results/: calibrated_outcomes.csv  sweep_full.csv  sweep_pass1.csv
scripts/: build_worlds_config.py  run_calibrated.py
sweeps/: calibrated_markets.csv
tests/: __init__.py  _sweep_synth.py  test_aggregation.py  test_atlas.py  test_calibration.py  test_censoring.py  test_censoring_aware.py  test_competition.py  test_demo_claim.py  test_demo_claim_nn.py  test_dml.py  test_drift.py  test_dro.py  test_epsilon_greedy.py  test_export.py  test_features.py  test_feedforward.py  test_forecaster.py  test_forecasters_shared.py  test_grid_slope.py  test_imports.py  test_interfaces.py  test_lockin.py  test_loop.py  test_loop_forecasters.py  test_map.py  test_metrics.py  test_oracle_dynamics.py  test_overlay.py  test_overlay_render.py  test_partition_sanity.py  test_pre_post.py  test_reference.py  test_risk.py  test_rnn.py  test_spsa.py  test_sweep.py  test_world.py  test_world_backcompat.py
(+9 files in other folders)
