[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fploop"
version = "1.2.1"
description = "Simulation toolkit for the forecast-price feedback loop"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "jrmst102" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",          # also provides joblib for the sweep's parallelism
    "plotly>=5.18",              # static figure generation (crossover map, pre/post figures)
    "pyarrow>=14.0",              # parquet engine for SweepResult.save/load (§C1.2)
]

[project.optional-dependencies]
nn = ["torch>=2.0"]                          # Phase 3: feedforward + RNN forecasters
viz = ["kaleido>=0.2,<1"]                     # Phase 4c.2: static PNG/SVG export (classic kaleido is self-contained; v1 needs a system Chrome)
calib = ["pyreadstat>=1.2", "linearmodels>=5.0"]  # Calibration: SAS reading + panel IV (Dominick's)
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["fploop"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
